<resources>
    <string name="app_name">NYTSearch</string>
    <string name="action_settings">Settings</string>
    <string name="search_query_hint">Enter Search Query</string>
    <string name="btn_search_text">Search</string>
    <string name="title_activity_article">ArticleActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="begin_date">Begin Date</string>
    <string name="sort_order">Sort Order</string>
    <string-array name="sort_order_items">
        <item>Oldest</item>
        <item>Newest</item>
    </string-array>
    <string name="news_desk_values">News Desk Values</string>
    <string name="arts">Arts</string>
    <string name="fashiond_amp_style"><![CDATA[Fashiond & Style]]></string>
    <string name="sports">Sports</string>
    <string name="save">Save</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
